# MapConditionedPose

./: .comet.config  .gitignore  CURRENT_VERSIONS.md  FIXES_SUMMARY.md  INSTALLATION.md  M4_COMPLETE.md  Makefile  PIPELINE.md  PIPELINE_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART_PIPELINE.txt  QUICK_START.md  README.md  SYSTEM_INTEGRATION_GUIDE.md  TEST_LMDB_MIGRATION.md  TEST_RESULTS_M1.md  TEST_RESULTS_M2.txt  debug_notebook.py  inspect_maps.py  optuna_study.db  pyproject.toml  pytest.ini  requirements-m2.txt  requirements-m3.txt  requirements-m4.txt  requirements-pinned.txt  requirements-test.txt  requirements.txt  run_all_scenarios.py  run_full_experiment.sh  run_pipeline.py  run_pipeline.sh  run_pipeline_v2.py  test_generation_fix.py
configs/: data_generation.yaml  data_generation_sionna.yaml  model.yaml  pipeline.yaml  training.yaml  training_simple.yaml  trial_0_config.yaml
docs/: ARCHITECTURE.md  DATAFORPOSITIONING.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  M1_ARCHITECTURE.md  M1_CHECKLIST.md  M1_COMPLETE.md  M1_SUMMARY.md  M2_COMPLETE.md  M2_SUMMARY.md  M4_COMPLETE.md  M4_PHYSICS_LOSS.md  M5_COMPLETE.md  MILESTONES.md  OSM_ROAD_FIX.md  PIPELINE.md  PIPELINE_SUMMARY.md  PROJECT_STATUS.md  README.md  SIONNA.md  SIONNA_IMPLEMENTATION_COMPLETE.md  SIONNA_INTEGRATION_PLAN.md  SIONNA_STATUS.md  SYSTEM_INTEGRATION_GUIDE.md  measurement_report.md
examples/: variable_length_data_example.py
misc/: requirements-dev.txt
notebooks/: visualization_presentation.ipynb  visualization_presentation_interactive.ipynb
outputs/: full_v2_log.txt
scripts/: compute_dataset_stats.py  convert_zarr_to_lmdb.py  debug_dims.py  debug_sionna_sys.py  extract_notebook_images.py  generate_dataset.py  generate_paper_figures.py  generate_radio_maps.py  generate_scenes.py  generate_test_lmdb.py  inspect_lmdb.py  inspect_zarr.py  plot_optuna_results.py  plot_tb_results.py  plot_ue_trajectories.py  proto_sys.py  quick_verify_e2.py  test_lidar_config.py  test_road_rasterization.py  test_road_rasterization_mock.py  test_sionna_gen.py  train.py  verify_equivariance.py  verify_native_features.py  verify_sionna_upgrade.py  visualize_scene.py
src/: __init__.py  notebook_plot_helpers.py  notebook_plot_helpers_extras.py  optuna_optimizer.py  scene_generation
tests/: conftest.py  test_augmentations.py  test_data_feature_shapes.py  test_data_generation.py  test_data_io_robustness.py  test_data_mac_dimensions.py  test_e2_embedder.py  test_feature_shapes.py  test_geo2sigmap.py  (+20 more)
(+24032 files in other folders)
