name = "transformer_ue_localization"
version = "0.1.0"
description = "Physics-Informed Deep Learning for User Equipment Positioning"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Core ML (Training Environment - No TensorFlow)
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"
timm = "^0.9.0"  # Vision Transformer backbones
torchvision = "^0.15.0"

# Data Storage - LMDB for efficient multiprocessing
lmdb = "^1.4.0"  # Primary dataset storage
pyarrow = "^10.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
h5py = "^3.8.0"

# Experiment Tracking
wandb = "^0.13.0"
tensorboard = "^2.13.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"

# Configuration
pyyaml = "^6.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"

# CLI
click = "^8.1.0"
tqdm = "^4.65.0"
rich = "^13.3.0"

# Testing
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.datagen.dependencies]
# Data Generation Environment (Separate - Uses TensorFlow)
sionna = "^0.18.0"
tensorflow = ">=2.14,<2.20"
drjit = "^0.4.0"
mitsuba = "^3.0.0"

# GIS/Geometry
osmnx = "^1.2.0"
geopandas = "^0.12.0"
shapely = "^2.0.0"
pyproj = "^3.4.0"
rasterio = "^1.3.0"
open3d = "^0.17.0"
pyvista = "^0.38.0"

[tool.poetry.group.web.dependencies]
# Web Interface (M5)
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
pillow = "^10.0.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
# Development tools
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.0"
jupyter = "^1.0.0"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ue-loc = "transformer_ue_localization.cli:main"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
